--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
  */
 
 body {
-  background-color: #f2f2f2;
+  background-color: white;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
