--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
  */
 
 body {
-  background-color: white;
+  background-color: #f2f2f2;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -22,7 +22,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
-    color: #333;
+    color: red;
 }
 
 h1 {
